--- a/roles/guest/tasks/main.yml
+++ b/roles/guest/tasks/main.yml
@@ -1,13 +1,16 @@
 ---
 - name: Install the base packages
   apt:
-          pkg:
-                  - most
-          install_recommends: no
-          state: latest
+    pkg:
+      - most
+    install_recommends: no
+    state: latest
 
-- name: Set most as the Default Pager for standard user
-  command: "echo 'export PAGER=\"most\"' >> /home/{{ user }}/.bashrc"
-
-- name: Set most as the Default Pager for the user root
-  command: "echo 'export PAGER=\"most\"' >> /root/.bashrc"
+- name: Ensure Most is the default Pager
+  lineinfile:
+    path: "/home/{{ user }}/"
+    regexp: '^export PAGER='
+    line: export PAGER=most
+    with_items:
+      - "/home/{{ user }}/.bashrc"
+      - "/root/.bashrc"
