--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,2 +1,7 @@
-ansible-lint
-yamllint
+-r requirements.txt
+
+ansible-lint~=6.21.1
+black~=23.3.0
+colorama~=0.4.6
+pre-commit~=3.5.0
+yamllint~=1.32.0
