--- a/update.yml
+++ b/update.yml
@@ -1,29 +1,31 @@
 ---
 
-- hosts: no_reboot
+- name: "Playbook updating without reboot"
+  hosts: no_reboot
   tasks:
-    - name: Update all installed packages using APT module
-      apt:
+    - name: "Update all installed packages using APT module"
+      ansible.builtin.apt:
         name: '*'
         state: latest
-        update_cache: yes
-        only_upgrade: yes
-        autoremove: yes
-        autoclean: yes
+        update_cache: true
+        only_upgrade: true
+        autoremove: true
+        autoclean: true
 
-- hosts: symfony
+- name: "Playbook updating and reboot"
+  hosts: symfony
   tasks:
-    - name: Update all installed packages using APT module
-      apt:
+    - name: "Update all installed packages using APT module"
+      ansible.builtin.apt:
         name: '*'
         state: latest
-        update_cache: yes
-        only_upgrade: yes
-        autoremove: yes
-        autoclean: yes
+        update_cache: true
+        only_upgrade: true
+        autoremove: true
+        autoclean: true
       notify: Reboot
 
   handlers:
-    - name: Reboot
-      reboot:
+    - name: "Reboot"
+      ansible.builtin.reboot:
         post_reboot_delay: 60
